# covidcli

./: README.md  README.rst  pyproject.toml  tox.ini
covidcli/: __init__.py  covidcli.py
covidcli/data/: coronavirus_dataset.csv
tests/: test_covidcli.py
