[tool.poetry]
name = "covidcli"
version = "0.1.0"
description = "Covidcli- A CLI For Tracking and Getting Info About Coronavirus Outbreak"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jcharis/covidcli"
repository = "https://github.com/Jcharis/covidcli"
keywords = ["covidcli","covid","coronavirus","jcharistech", "covid19","covid-cli",disease","WHO"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
covidcli = "covidcli.covidcli:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
